<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_default_key">177881343771218234543524242</string>
    <string name="app_name">تعبیر خواب</string>
    <string name="action_menu_rotate">چرخش صفحه</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="tabir_comment_name">نام</string>
    <string name="tabir_comment">نظر</string>
    <string name="tabir_comment_submit">ارسال</string>
    <string name="lbl_comments">نظرات کاربران</string>

    <string translatable="false" name="app_searchcaption">جستجو در خبرها ...</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>خانه</item>
        <item>علاقه مندیها</item>
        <item>آ</item>
        <item>ا</item>
        <item>ب</item>
        <item>پ</item>
        <item>ت</item>
        <item>ث</item>
        <item>ج</item>
        <item>چ</item>
        <item>ح</item>
        <item>خ</item>
        <item>د</item>
        <item>ذ</item>
        <item>ر</item>
        <item>ز</item>
        <item>ژ</item>
        <item>س</item>
        <item>ش</item>
        <item>ص</item>
        <item>ض</item>
        <item>ط</item>
        <item>ظ</item>
        <item>ع</item>
        <item>غ</item>
        <item>ف</item>
        <item>ق</item>
        <item>ک</item>
        <item>گ</item>
        <item>ل</item>
        <item>م</item>
        <item>ن</item>
        <item>و</item>
        <item>ه</item>
        <item>ی</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="tabir_app_file_key">177881343771218234543524242</string>
    <string name="Favorite_Item_list">FItemList</string>
    <string name="add_to_favorite_caption">اضافه به لیست علاقه مندی ها</string>

</resources>