<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/textAreaScroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_x="0px"
    android:layout_y="25px"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dip"
            android:background="@drawable/meaning_shape"
            android:gravity="right"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvWordTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="7dip"
                android:paddingLeft="7dip"
                android:paddingRight="7dip"
                android:paddingTop="7dip"
                android:text="Title"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <WebView
                android:id="@+id/webview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/MainAppBackColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/btnSendSMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:background="@null"
                android:src="@drawable/sms" />

            <ImageButton
                android:id="@+id/btnAddToFavorite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@null"
                android:contentDescription="@string/add_to_favorite_caption"
                android:src="@drawable/star_off" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_commenttool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            
             >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:text="@string/lbl_comments" />

            <Button
                android:id="@+id/btnDisplayAllComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="همه نظرات" />

            <LinearLayout
                android:id="@+id/LayoutComments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dip"
                android:background="@drawable/comment_container"
                android:orientation="vertical" >

                <ListView
                    android:id="@+id/lvComments"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:listSelector="@drawable/tabir_list_selector" >
                </ListView>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dip"
                android:background="@drawable/send_comment_container"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dip" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|right" >

                    <EditText
                        android:id="@+id/txtName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text" >
                    </EditText>

                    <TextView
                        android:id="@+id/tabir_comment_name"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tabir_comment_name" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/txtComment"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text" >
                    </EditText>

                    <TextView
                        android:id="@+id/lblComment"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tabir_comment" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/btnSubmit"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tabir_comment_submit" />

                    <TextView
                        android:id="@+id/tvMessage"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>